# rpi-media-centre

./: .gitignore  .pre-commit-config.yaml  .vale.ini  README.md  pictl  pyproject.toml
.github/config/actions/: gaurav-nelson-github-action-markdown-link-check.json
.github/scripts/: step-setup-environment.sh
.github/workflows/: workflow-push.yml
.vale/Vocab/rpi-media-centre/: accept.txt
services/: docker-compose.yml
services/data/: config.yml
